fixed build errors; fixed line wrapping of header table cells

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -280,3 +280,7 @@ span>.icon-container~span {
 .ant-result {
     padding: 1em 2em;
 }
+
+.ant-table-column-title {
+    white-space: nowrap;
+}
